--- a/views/layout/userLayout.hbs
+++ b/views/layout/userLayout.hbs
@@ -67,6 +67,9 @@
     {{!-- from shop --}}
     <script src="assets/js/wNumb.js"></script>
     <script src="assets/js/nouislider.min.js"></script>
+    {{!-- sweet alert --}}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
     <!-- Main JS File -->
     <script src="assets/js/demos/demo-5.js"></script>
