fixed errors in coupon

--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -85,7 +85,7 @@
           </div>
           <div class="mb-3">
             <label for="discountType" class="form-label">Discount type </label>
-            <input type="number" class="form-control" id="discountType" name="discountType" required>
+            <input type="text" class="form-control" id="discountType" name="discountType" required>
           </div>
           <div class="mb-3">
             <label for="usageCount" class="form-label">usageCount </label>
@@ -135,7 +135,7 @@
           </div>
           <div class="mb-3">
             <label for="editdiscountType" class="form-label">discount Type</label>
-            <input type="number" class="form-control" id="editdiscountType" name="discountType" required>
+            <input type="text" class="form-control" id="editdiscountType" name="discountType" required>
           </div>
           <div class="mb-3">
             <label for="editUsageCount" class="form-label">Usage Count</label>
