--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -76,7 +76,7 @@
                                 <div class="card-header" id="headingAddress">
                                     <h2 class="card-title">
                                         <a role="button" data-toggle="collapse" href="#collapseSelectAddress" aria-expanded="true" aria-controls="collapseSelectAddress">
-                                            Select Existing Address
+                                            Select  Address
                                         </a>
                                     </h2>
                                 </div><!-- End .card-header -->
@@ -284,6 +284,7 @@
     </script>
 
 <script>
+
     function selectCoupon(code) {
         document.getElementById('selectedCouponCode').value = code;
     }
