--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -77,7 +77,7 @@
           </div>
           <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <input type="text" class="form-control" id="description" name="description" value="{{coupon.description}}"required>
+            <input type="text" class="form-control" id="description" name="description" required>
           </div>
           <div class="mb-3">
             <label for="discount" class="form-label">Discount </label>
