fixed some  errors

--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -220,6 +220,9 @@
     </div><!-- End .page-content -->
 </main><!-- End .main -->
 
+{{!-- below for stripe --}}
+
+{{!-- above for stripe --}}
 
 
 
@@ -230,6 +233,10 @@
 
 {{>mobileView}}
 
+{{!-- below for stripe --}}
+<script src="https://js.stripe.com/v3/"></script>
+
+{{!-- above for stripe --}}
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
